# ActuallyOpenAI

./: .env.docker  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.worker-gpu  LICENSE  Procfile  README.md  SCALING_ROADMAP.md  SECURITY.md  continuous_node.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  federated_continuous_node.py  node.py  pyproject.toml  railway.json  render.yaml  requirements.txt  run_training.py  scaling_node.py  start.py  test_continuous_growth.py  test_training_system.py  train_local_demo.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  deploy.yml
actuallyopenai/: __init__.py  config.py
actuallyopenai/api/: __init__.py  model_api.py  model_inference.py  production_api.py
actuallyopenai/blockchain/: __init__.py  contracts.py  token_service.py
actuallyopenai/cli/: __init__.py  main.py
actuallyopenai/core/: __init__.py  database.py  model_registry.py  models.py
actuallyopenai/data/: __init__.py  bpe_tokenizer.py  pretraining_pipeline.py
actuallyopenai/deploy/: kubernetes.py
actuallyopenai/mining/: __init__.py  adaptive_miner.py
actuallyopenai/models/: __init__.py  continuous_growth.py  scalable_model.py
actuallyopenai/monitoring/: metrics.py
actuallyopenai/network/: __init__.py  api_mesh.py  compute_aggregator.py  ipfs_storage.py  p2p_node.py
actuallyopenai/orchestrator/: __init__.py  main.py  scaling_orchestrator.py  server.py
actuallyopenai/token/: __init__.py  aoai_token.py
actuallyopenai/training/: __init__.py  auto_scaler.py  continuous_improvement.py  continuous_trainer.py  distributed_pretraining.py  model_evolution.py  (+3 more)
aoai_data/: wallet.json
config/: alert_rules.yml  nginx.conf  prometheus.yml
contracts/: AOAIToken.sol  hardhat.config.js  package.json
docker/: api.Dockerfile  dashboard.Dockerfile  orchestrator.Dockerfile  worker.Dockerfile
docs/: index.html
monitoring/: prometheus.yml
scripts/: deploy.ps1  deploy.sh  full_demo.py  prepare_data.py  test_api.py  train_model.py
tests/: test_all.py
(+10 files in other folders)
